--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.jpa.generate-ddl=true
+server.port=8181
+
+spring.datasource.url=jdbc:postgresql://172.30.225.203:5432/test
+spring.datasource.username=foo
+spring.datasource.password=bar
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
